objects/Reset__c.object
<CustomObject>
    <description>Object for holding reset details.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>CREATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>READ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <label>Metadata Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Body__c</fullName>
        <label>Reset Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reset_JSON__c</fullName>
        <label>Reset JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reset_Logic__c</fullName>
        <description>If First Serve is selected then as soon as the first one is reset successfully loop exist and shows reset message. If Unanimous is selected then we expect all reset to pass. If one fails, exit loop and show failure message.</description>
        <inlineHelpText>If First Serve is selected then as soon as the first one is reset successfully loop exist and shows reset message. If Unanimous is selected then we expect all reset to pass. If one fails, exit loop and show failure message.</inlineHelpText>
        <label>Reset Logic</label>
        <picklist>
            <picklistValues>
                <fullName>First Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unanimous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reset_Type__c</fullName>
        <label>Reset Type</label>
        <picklist>
            <picklistValues>
                <fullName>SOQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metadata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inline Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup Class</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Resets</relationshipLabel>
        <relationshipName>Resets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Resets</relationshipLabel>
        <relationshipName>Resets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>